@@ -1,4 +1,22 @@
-<html><body>Press <b>A+,</b> to put the word under the caret in the search
-bar, then press <b>ENTER</b> and <b>S+ENTER</b> to search forwards and
-backwards, respectively, for occurrences of that word in the current buffer.
+<html><body>
+<p>Using the search bar can be a real time saver in a lot of cases, especially
+when you need to jump around between different parts of a buffer.</p>
+
+<p>By default, the search bar is only shown when
+one of the quick search commands are invoked; however you can specify that it
+always be shown in the <b>General</b> pane of the <b>Utilities</b>&gt;<b>Global
+Options</b> dialog box.</p>
+
+<p>The following keyboard commands deal with the search bar; you will find it
+much easier to navigate around files if you memorize these:</p>
+
+<ul>
+<li>Pressing <b>C+,</b> shows the search bar (if necessary) and sends keyboard
+focus there.</li>
+<li>Pressing <b>C+.</b> also shows the search bar, but pre-selects the
+<b>HyperSearch</b> check box.</li>
+<li>Pressing <b>A+,</b> puts the word at the caret location into the search bar.</li>
+<li>Pressing <b>A+.</b> performs a HyperSearch for the word at the caret location.</li>
+</ul>
+
 </body></html>
